Feat: Pacientes e melhorias
